--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -11,28 +11,18 @@ workflows:
       flutter: stable
     scripts:
       - name: Set up local.properties
-        script: |
+        script: | 
           echo "flutter.sdk=$HOME/programs/flutter" > "$CM_BUILD_DIR/android/local.properties"
       - name: Get Flutter packages
-        script: |
+        script: | 
           flutter packages pub get
-      - name: Flutter analyze
-        script: |
-          flutter analyze
-      # - name: Flutter unit tests
-      #   script: |
-      #     flutter test
-      #   ignore_failure: true
       - name: Build AAB with Flutter
-        script: |
-          BUILD_NUMBER = 1
-          flutter build appbundle --release \
-            --build-name=1.0.$BUILD_NUMBER \
-            --build-number=$BUILD_NUMBER
-    artifacts:
-      - build/**/outputs/**/*.aab
-      - build/**/outputs/**/mapping.txt
-      - flutter_drive.log
+        script: | 
+          flutter build appbundle --release
+      artifacts:
+        - build/**/outputs/**/*.aab
+        - build/**/outputs/**/mapping.txt
+        - flutter_drive.log
     # publishing:
     #   email:
     #     recipients:
