--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=wcf20011127
 keyPassword=wcf20011127
 keyAlias=upload
-storeFile=/Users/fecyi/OneDrive/Desktop/app_dev/Final_App/pixel_wings
+storeFile=upload-keystore.jks
