--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pixel_wings">
+    package="com.pixel_wings">
    <application
         android:label="pixel_wings"
         android:name="${applicationName}"
